--- a/6.ABCRFcont.Rmd
+++ b/6.ABCRFcont.Rmd
@@ -31,20 +31,23 @@ Random forests are a machine learning method for regression and classification. 
 
 Explore CARTs using `tree()` function from `tree` package. First make a regression tree for parameter $\theta_1$ from Tajima's $D$ and $\pi$. Then make a classification tree for model from Tajima's $D$ and Fu and Li's $D$.
 
-```{r cart_regression, exercise=TRUE, exercise.lines=30}
-ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_2.RDS")
+```{r eval=T, echo=T}
+ref_table_2 <- readRDS(file="data/ref_table_2.RDS")
+```
 
-regression_tree <- tree(theta1 ~ TD + PI, data=ref_table)
+
+```{r cart_regression, exercise=TRUE, exercise.lines=30}
+regression_tree <- tree(theta1 ~ TD + PI, data=ref_table_2)
 
 plot(regression_tree)
 text(regression_tree,cex=0.75)
 
 par(bg = 'aliceblue')
-plot(ref_table$TD,
-     ref_table$PI,
+plot(ref_table_2$TD,
+     ref_table_2$PI,
      xlab="Tajima's D",
      ylab=expression(pi),
-     col=grey(1-ref_table$theta1/max(ref_table$theta1)),
+     col=grey(1-ref_table_2$theta1/max(ref_table_2$theta1)),
      pch=20)
 
 # for whatever reason this part gives an error here but runs fine in an R console, try there
@@ -53,17 +56,18 @@ partition.tree(regression_tree,
                add=T,cex=1)
 ```
 
-
-```{r cart_classification, exercise=TRUE, exercise.lines=30}
-ref_table_1 <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
-ref_table_2 <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_2.RDS")
+```{r eval=T, echo=T}
+ref_table_1 <- readRDS(file="data/ref_table_1.RDS")
+ref_table_2 <- readRDS(file="data/ref_table_2.RDS")
 
 num_of_sims <- 10000
-
 model <- c(rep("constant population size",num_of_sims),rep("population size change",num_of_sims))
 sumstats <- rbind(ref_table_1[seq_len(num_of_sims),c("S","PI","NH","TD","FLD")],
                   ref_table_2[seq_len(num_of_sims),c("S","PI","NH","TD","FLD")])
 ref_table <-cbind(model,sumstats)
+```
+
+```{r cart_classification, exercise=TRUE, exercise.lines=30}
 
 classification_tree <- tree(model ~ TD + FLD, data=ref_table)
 
@@ -88,18 +92,21 @@ partition.tree(classification_tree,
 
 ### Exercise 2
 
+```{r eval=T, echo=T}
+ref_table_1 <- readRDS(file="data/ref_table_1.RDS")
+```
+
+
 ```{r many_trees, exercise=TRUE, exercise.lines=30}
-ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
+ref_table_1 <- ref_table_1[ref_table_1$PI!=0,] # just for plotting convenience (log scale)
 
-ref_table <- ref_table[ref_table$PI!=0,] # just for plotting convenience
-
-regression_tree <- tree(log(theta) ~ PI, data=ref_table)
+regression_tree <- tree(log10(theta) ~ PI, data=ref_table_1)
 
 plot(regression_tree)
 text(regression_tree,cex=0.75)
 
-plot(ref_table$PI,
-     log(ref_table$theta),
+plot(ref_table_1$PI,
+     log10(ref_table_1$theta),
      xlab=expression(pi),
      ylab=expression(log[10]*theta),
      pch=20, log="x")
@@ -109,14 +116,14 @@ partition.tree(regression_tree,
                ordvars=c("PI","theta"),
                add=T,cex=1.5,col="red",lwd=2)
 
-plot(ref_table$PI,
-     log10(ref_table$theta),
+plot(ref_table_1$PI,
+     log10(ref_table_1$theta),
      xlab=expression(pi),
      ylab=expression(log[10]*theta),
      pch=20,log="x")
 for (i in 1:100){
-        random_sample <- sample(nrow(ref_table),size=500,replace=T)
-        ref_table_random_sample <- ref_table[random_sample,]
+        random_sample <- sample(nrow(ref_table_1),size=500,replace=T)
+        ref_table_random_sample <- ref_table_1[random_sample,]
         regression_tree_random_sample <- tree(log10(theta) ~ PI, data=ref_table_random_sample)
         partition.tree(regression_tree_random_sample,
                        ordvars=c("PI","theta"),
@@ -127,16 +134,18 @@ for (i in 1:100){
 
 ## ABC with Random Forest
 
-As we have seen above, Random Forest allows you to classify your observation in a category (i.e. model choice) and obtain an estimate of a quantitative variable (i.e. parameter estimation). But these values are not associated to posterior probabilities. The package `abcrf` [Marin et al., 2017] implements the development that allow to get these probabilities using random forest. For model choice, random forest provides you with the number of votes supporting each of the models (number of votes = number of trees leading to a given model). However, the number of votes is not necessary a good quantitative measure of the incertitude of the model choice. Pudlo et al. [2016] developed the approach to estimate the posterior probability. First, a random forest is
-grown for model choice:
+As we have seen above, Random Forest allows you to classify your observation in a category (i.e. model choice) and obtain an estimate of a quantitative variable (i.e. parameter estimation). But these values are not associated to posterior probabilities. The package `abcrf` [Marin et al., 2017] implements the development that allow to get these probabilities using random forest. For model choice, random forest provides you with the number of votes supporting each of the models (number of votes = number of trees leading to a given model). However, the number of votes is not necessary a good quantitative measure of the incertitude of the model choice. Pudlo et al. [2016] developed the approach to estimate the posterior probability. First, a random forest is grown for model choice:
 
 ### Exercise 3
 
-```{r abcrf_model_choice, exercise=TRUE, exercise.lines=30}
-target      <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
-ref_table_1 <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_1.RDS")
-ref_table_2 <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_2.RDS")
+```{r eval=T, echo=T}
+target      <- readRDS(file="data/target.RDS")
+ref_table_1 <- readRDS(file="data/ref_table_1.RDS")
+ref_table_2 <- readRDS(file="data/ref_table_2.RDS")
+```
 
+
+```{r abcrf_model_choice, exercise=TRUE, exercise.lines=30}
 num_of_sims <- 10000
 model <- c(rep("constant population size",num_of_sims),rep("population size change",num_of_sims))
 sumstats <- rbind(ref_table_1[seq_len(num_of_sims),c("S","PI","NH","TD","FLD")],
