--- a/5.ABCRF.Rmd
+++ b/5.ABCRF.Rmd
@@ -24,6 +24,11 @@ library(learnr)
 library(abcrf)
 # function for weighted histogram
 suppressMessages(library(weights, quietly=T))
+
+# load data and reference table
+target      <- readRDS(file="data/target.RDS")
+ref_table_1 <- readRDS(file="data/ref_table_1.RDS")
+ref_table_2 <- readRDS(file="data/ref_table_2.RDS")
 ```
 
 ## Limitations of classical ABC
@@ -84,7 +89,8 @@ model_selection_result_RF <- predict(object= model_RF,
 Estimate parameter $\theta$ from the model of constant population size for *octomanati* using the code provided (it uses function `regAbcrf()`).
 
 * Increase the number of trees if necessary.
-* Are the estimates very different from the ones obtained with classical regression ABC (unit 3)? * The values of $\theta$ from the whole reference table are used to plot the histogram of its posterior probability distribution, why?
+* Are the estimates very different from the ones obtained with classical regression ABC (unit 3)?
+* The values of $\theta$ from the whole reference table are used to plot the histogram of its posterior probability distribution, why?
 
 ```{r eval=T, echo=T}
 target      <- readRDS(file="data/target.RDS")
